# 4_Gewinnt_Gruppe_3

./: .gitignore  README.md  glossar.txt  pyproject.toml  requirements.txt
ADRs/: #003-centralized-shared-game-logic  #004-realitive-perpective-state-encoding.md  Architecture.md
docs/: README.md
docs/adrs/: #007-mct-root-parallezlization.md  #008-single-core-engine.md  001_approach.md  002_separation_runtime_training.md  003_centralized_game_logic.md  004_relative_perspective_encoding.md  005_stateless_agent.md  006_hybrid_live_decisions.md  007_mcts_root_parallelization.md  008_single_core_engine.md  009_supervised_master_mix.md  template.md
docs/api/: README.md  agent_protocol.md  board_format.md
docs/architecture/: data.md
docs/documentation/: docu.md  glossar.md  level1.md  level2.md  level3.md  training_timeline.md
general/: glossar.txt  tasks.md
logs/: benchmark_ModellplusMTC_vs_Einfache_Engine_20260621_140430.txt  benchmark_ModellplusMTC_vs_ModellplusMTC_20260622_123911.txt  benchmark_ModellplusMTC_vs_ModellplusMTC_20260622_154715.txt  benchmark_ModellplusMTC_vs_Starke_Engine_20260622_120434.txt  benchmark_ModellplusMTC_vs_Starke_Engine_20260622_121144.txt  benchmark_ModellplusMTC_vs_Starke_Engine_20260622_130653.txt  benchmark_Starke_Engine_vs_ModellplusMTC_20260622_123422.txt  benchmark_Starke_Engine_vs_ModellplusMTC_20260622_141410.txt  logs.md
runtime_system/: main_live.py
shared/: data_structures.py  game_logic.py  state_encoder.py
tools/: mtc.py  play_terminal.py  strong_engine.py
training_system/: main_train.py  supervised_train.py
(+207 files in other folders)
