[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connect4_3d_agent"
version = "0.1.0"
description = "Ein autonomer, auf Deep Reinforcement Learning basierender Agent für 4-Gewinnt 3D"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Gruppe 3" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "websockets>=11.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
# Automatische Erkennung der Code-Ordner
where = ["."]
include = ["shared*", "runtime_system*", "training_system*", "tools*"]